--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,293 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Manrope:wght@700&family=Poppins:wght@500;600;700&family=Roboto:wght@700&display=swap');
 
 /* common styles */
-font-family: 'Inter', sans-serif;
-font-family: 'Manrope', sans-serif;
-font-family: 'Poppins', sans-serif;
-font-family: 'Roboto', sans-serif;
+
+body{
+    background-color: #aaaaaa13;
+    font-family: 'Poppins', sans-serif;
+    margin:0;
+}
+.container{
+    max-width: 1047px;
+    padding-bottom: 100px;
+    padding-left:120px;
+    padding-right:120px;
+}
+h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
+    color: #3A3A3A;
+    font-size:52px;
+    margin:0;
+}
+
+/* header */
+
+header h4{
+    font-weight: 700;
+    font-size: 24px;
+    color:#3A3A3A;
+    margin:87px 0 50px 120px;
+}
+
+/* top banner */
+.top-banner{
+    display:flex;
+}
+.half-width{
+    width: 50%;
+}
+.half-width img{
+    width: 70%;
+    padding-left: 50px;
+}
+.top-banner p{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 16px 0;
+}
+.link-button{
+    
+    text-decoration:none;
+    background: #E02C6D;
+    padding: 10px 24px;
+    border-radius: 41px;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+/* top-products */
+.top-products{
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+}
+
+.products{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    padding-bottom: 50px;
+    
+
+}
+.product{
+    width: 329px;
+    height: 476px;
+    border-radius: 5px;
+    background-color: #fff;
+    
+
+}
+.product-image{
+padding: 17px 15px 16px 14px;
+}
+
+.product-details{
+    margin: 0 0 17px 14px;
+    
+}
+.product-details h3{
+    font-weight: 500;
+    font-size: 28px;
+    text-align: left;
+    margin: 0;
+    padding-bottom:6px;
+}
+.product-details h4{
+    font-family: 'Inter', sans-serif;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0;
+    text-align: left;
+    padding-bottom:6px;
+
+}
+.product-details p{
+    font-family: 'Inter', sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    margin: 0;
+    text-align:left;
+    color: #787885;
+}
+.rating{
+    display: flex;
+    align-items: left;
+}
+.rating span{
+    font-family: font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    color: #5E6366;
+    padding-left: 10px;
+}
+.fa-star, .fa-star-half-alt{
+    color: #FB8200;
+}
+
+.more { 
+    color: #E02C6D;
+    text-align:right;
+   
+}
+.more p{
+    margin:0;
+}
+
+.fa-arrow-right{
+    padding-left: 8px;
+}
+
+/* master-class */
+
+.master-class{
+    display:flex;
+}
+.master-details{
+    width: 50%;
+    padding-left: 50px;
+}
+.master-image img{
+    width: 100%;
+    margin-top:30px;
+}
+.master-details h2{
+    font-size: 38px;
+    font-weight: 700;
+    line-height: 60px;
+    margin: 0;
+}
+.master-details p{
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    margin: 16px 0;
+}
+.link-button{
+    
+    text-decoration:none;
+    background: #E02C6D;
+    padding: 10px 24px;
+    border-radius: 41px;
+    color: white;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+/* footer */
+
+footer{
+    background-color: #000000;
+    padding: 50px;
+    text-align:center;
+}
+footer h4{
+    font-weight: 700;
+    font-size: 24px;
+    color:#fff;
+    margin:0 0 3px 0;
+}
+footer p{
+    font-family: 'Manrope', sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    color:#D9DBE1;
+    margin:0 0 3px 0;
+}
+footer>ul{
+    margin:0;
+    padding:0;
+}
+footer>ul>li {
+    text-decoration: none;
+    display:inline;
+}
+footer>ul>li i {
+    color: white;
+    margin: 17px 8px 0 8px;
+}
+/* media queries */
+
+/* mobile devices */
+@media only screen and (max-width:688px){
+    .container{
+        width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+    header{
+        text-align: center;
+    }
+    header h4{
+        margin-left: 0;
+    }
+    .products{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .product{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .top-banner{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .master-class{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .master-details{
+        width: 300px;
+        padding-left: 30px;
+    }
+    .master-image img{
+        max-width: 100%;
+    }
+    .half-width{
+        width:300px;
+    }
+}
+
+/* tablet devices */
+
+@media only screen and (min-width: 688px) and (max-width:992px){
+    .container{
+        width: 100%;
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+    header{
+        text-align: center;
+    }
+    header h4{
+        margin-left: 0;
+    }
+    .products{
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .product{
+        justify-content: center;
+    }
+    /* .top-banner{
+        flex-direction: column-reverse;
+        justify-content: center;
+    }
+    .master-class{
+        flex-direction: column-reverse;
+        justify-content: center; */
+    }
+    .master-details{
+        max-width: 40%;
+        padding-left: 30px;
+    }
+    .master-image img{
+        max-width: 80%;
+    }
+    .half-width{
+        max-width:40%;
+    }
+}
